@@ -1,7 +1,7 @@
 /*
  * rowviewer.h
  *
- * (c) 2002-2004,2009 by Jeremy Bowman <jmbowman@alum.mit.edu>
+ * (c) 2002-2004,2009-2010 by Jeremy Bowman <jmbowman@alum.mit.edu>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -51,6 +51,8 @@ private slots:
     void nextRow();
     void previousRow();
     void editRow();
+    void copyRow();
+    void deleteRow();
     void viewChanged(int index);
 
 private:
